[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-stubs"
version = "0.0.1"
description = 'Type stubs for when Airflow is not installed'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ben Mares", email = "services-airflow-stubs@tensorial.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/maresb/airflow-stubs#readme"
Issues = "https://github.com/maresb/airflow-stubs/issues"
Source = "https://github.com/maresb/airflow-stubs"

[tool.hatch.build.targets.wheel]
packages = ["airflow-stubs"]
