[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "airflow-stubs"
dynamic = ["version"]
description = 'Type stubs for when Airflow is not installed'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ben Mares", email = "services-airflow-stubs@tensorial.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/maresb/airflow-stubs#readme"
Issues = "https://github.com/maresb/airflow-stubs/issues"
Source = "https://github.com/maresb/airflow-stubs"

[tool.hatch.build.targets.wheel]
packages = ["airflow-stubs"]

[tool.hatch.version]
# Determine the version number based on Git tags
source = "vcs"
# Ensure that the version number is of the form vX.Y.Z
tag-pattern = '''^v(\d+\.\d+\.\d+)$'''

[tool.check-wheel-contents]
ignore = [
  "W002", # Wheel contains duplicate files
]
